Prevent filters from getting cut off

--- a/ui/src/app/applications/components/applications-list/applications-list.scss
+++ b/ui/src/app/applications/components/applications-list/applications-list.scss
@@ -98,6 +98,7 @@
 
         &__filters {
             flex-wrap: wrap;
+            padding-bottom: 6em;
 
             &__title .action-button {
                 display: none;
